Tue Apr 01 12:13:33 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CodeSets/libs/IBM1047_ISO8859/Makefile.bor: Added this
          missing BCB makefile to fix error on the scoreboard.

Tue Apr 01 08:03:03 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IOP_Codec.pidl:
        * tao/IOP_IOR.pidl:
          Fixed fuzz doxygen errors.

Mon Mar 31 19:27:19 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/RTCORBA/RTCORBAC.cpp:
        * tao/DynamicAny/DynamicAnyC.cpp:

          Added missing conditional explicit template instantiations.
          Thanks to Phil Mesnier <mesnier_p@ociweb.com> for pointing
          out the problem.

Mon Mar 31 17:11:23 2003  Phil Mesnier  <mesnier_p@ociweb.com>

        * ChangeLog:
        * tao/Codeset_Manager.cpp:
        * tao/Codeset_Manager.h:
        * tao/Invocation.cpp:
        * tao/default_resource.cpp:
        * tests/CodeSets/simple/client.cpp:
        * tests/CodeSets/simple/server.cpp: Errant TAB elimination.

Mon Mar 31 15:09:32 2003  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Codeset_Manager.cpp:
        * tao/Codeset_Manager.h:
        * tao/Codeset_Translator_Factory.h:
        * tao/Codeset_Translator_Factory_T.h:
        * tao/Invocation.cpp:
        * tao/Transport.h:
        * tao/default_resource.cpp: Address the conserns raised by
          Bala. These include adding Doxygen documentation and making some
          calls more efficient by using inline code to check conditions
          before making calls.

        * tests/CodeSets/simple/client.cpp:
        * tests/CodeSets/simple/cs_test.conf:
        * tests/CodeSets/simple/svc.conf:
        * tests/CodeSets/simple/server.cpp:
        * tests/CodeSets/simple/simple.idl: Add a wstring test to the
          simple interface.

        * tests/Param_Test/helper.cpp: Limit the generation of random
          wchar values to only those values that fit in the output cdr's
          wchar_maxbytes number of bytes.
